--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -7,7 +7,17 @@ body {
 }
 
 #top {
+    font-size: 16px;
     transition: 0.5s;
+    padding: 10px;
+}
+
+.nav-item {
+    color: black;
+}
+
+.navbar-toggler {
+    padding: 0;
 }
 
 #intro {
@@ -25,4 +35,18 @@ body {
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
+}
+
+@media (min-width: 992px) {
+
+    #brand-name {
+        position: relative;
+        left: 25%;
+    } 
+    
+    #navbarNavAltMarkup {
+        position: relative;
+        right: 25%;
+    }
+
 }
